--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,9 +1,16 @@
-name: mysql-to-mongo
-channels:
-  - defaults
-dependencies:
-  - python=3.10
-  - pip
-  - pymongo
-  - mysql-connector-python
-  - pyyaml
+# config.yaml
+
+mysql:
+  host: host
+  port: 3306
+  user: user
+  password: password
+  database: database
+
+mongodb:
+  host: host
+  port: 27017
+  user: user
+  password: password
+  database: database
+  collection: collection
